# Intraday_Auto_Trading

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: settings.example.toml  symbol_group.toml
docs/: architecture.md  claude-handoff.md  implementation-plan-data-backtest.md  incremental-requirements-data-backtest.md  market-data-capability-matrix.md  market-data-handoff.md  market-data-pipeline-plan.md  product-requirements.md  signal-dev20.md  trend-classification-spec.md
docs/manual/: intraday_low_execution_rule_v2_codex.md  初级开发文档说明.md  当日趋势量化分析.md
handoff/: HANDOFF_TEMPLATE.md  current_status.md
scripts/: backfill_bar_request_log.py  backfill_daily_coverage.py  main_chain_chart.py  test_order_flow.py  tracker_chart.py
src/intraday_auto_trading/: app.py  cli.py  config.py  models.py  symbol_manager.py
src/intraday_auto_trading/gateways/: __init__.py  ibkr_account.py  ibkr_market_data.py  moomoo_options.py  virtual_account.py  yfinance_market_data.py
tests/: test_backtest_chain_validation.py  test_backtest_data_service.py  test_bar_data_service.py  test_bar_metrics.py  test_cli_symbol_groups.py  test_config.py  test_ibkr_account.py  test_intraday_low_signal.py  test_market_data_repository.py  test_market_data_sync.py  test_provider_capabilities.py  test_provider_timezones.py  test_selector.py  test_symbol_management_data_fetcher.py  test_tracker.py  test_trend_classifier.py  test_trend_input_loader.py  test_virtual_account.py  test_yfinance_market_data.py
(+23 files in other folders)
