[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-auto-trading"
version = "0.1.0"
description = "Intraday auto trading starter project for dip-buy execution based on opening-session trend classification."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "yfinance>=0.2"]
ibkr = ["ibapi>=9.81.1"]
moomoo = ["moomoo-api>=8.7.0"]
yfinance = ["yfinance>=0.2"]

[project.scripts]
intraday-auto-trading = "intraday_auto_trading.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
